--- a/Objects/Smart_Agriculture.build_log.htm
+++ b/Objects/Smart_Agriculture.build_log.htm
@@ -27,7 +27,16 @@ Project File Date:  07/16/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Smart_Agriculture_STM32F1'
-".\Objects\Smart_Agriculture.axf" - 0 Error(s), 0 Warning(s).
+compiling DHT11.c...
+Mylib\DHT11.c(28): warning:  #188-D: enumerated type mixed with another type
+      GPIO_WriteBit(DHT11_PORT, DHT11_PIN, 0);
+Mylib\DHT11.c(30): warning:  #188-D: enumerated type mixed with another type
+      GPIO_WriteBit(DHT11_PORT, DHT11_PIN, 1);
+Mylib\DHT11.c: 2 warnings, 0 errors
+linking...
+Program Size: Code=7780 RO-data=412 RW-data=76 ZI-data=1028  
+FromELF: creating hex file...
+".\Objects\Smart_Agriculture.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +59,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
