--- a/Objects/Smart_Agriculture.build_log.htm
+++ b/Objects/Smart_Agriculture.build_log.htm
@@ -22,12 +22,21 @@ Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
 E:\STUDY\192_semester\Design_Project\Code\Smart_Agriculture_STM32F1\Smart_Agriculture_STM32F1.uvprojx
-Project File Date:  07/30/2020
+Project File Date:  07/31/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Smart_Agriculture_STM32F1'
-".\Objects\Smart_Agriculture.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+Src\main.c(44): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *restrict"
+  		sprintf(txbuffer, "a%0.1f,%0.1f,%8.1f", DHT11_temp, DHT11_humd, lux);
+Src\main.c(61): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const char *"
+  		DBG("\n %d \n",strlen(txbuffer));
+Src\main.c: 2 warnings, 0 errors
+linking...
+Program Size: Code=11200 RO-data=424 RW-data=80 ZI-data=1048  
+FromELF: creating hex file...
+".\Objects\Smart_Agriculture.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +59,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
