--- a/Objects/Smart_Agriculture.build_log.htm
+++ b/Objects/Smart_Agriculture.build_log.htm
@@ -27,14 +27,15 @@ Project File Date:  07/31/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Smart_Agriculture_STM32F1'
+compiling Uart.c...
 compiling main.c...
 Src\main.c(44): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *restrict"
-  		sprintf(txbuffer, "a%0.1f,%0.1f,%8.1f", DHT11_temp, DHT11_humd, lux);
+  		sprintf(txbuffer, "a%4.1f,%4.1f,%8.1f", DHT11_temp, DHT11_humd, lux);
 Src\main.c(61): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const char *"
   		DBG("\n %d \n",strlen(txbuffer));
 Src\main.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=11200 RO-data=424 RW-data=80 ZI-data=1048  
+Program Size: Code=11256 RO-data=424 RW-data=80 ZI-data=1048  
 FromELF: creating hex file...
 ".\Objects\Smart_Agriculture.axf" - 0 Error(s), 2 Warning(s).
 
@@ -59,7 +60,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
