--- a/Objects/Smart_Agriculture.build_log.htm
+++ b/Objects/Smart_Agriculture.build_log.htm
@@ -3,39 +3,68 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.28.0.0
-Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Vien Nguyen Lam, HCMUT, LIC=JDASB-2LXAL-05HTY-IBRS5-EIBFU-V654S
+IDE-Version: µVision V5.31.0.0
+Copyright (C) 2020 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: a a, a, LIC=----
  
 Tool Versions:
-Toolchain:       MDK-ARM Professional  Version: 5.28.0.0
+Toolchain:       MDK-ARM Plus  Version: 5.31.0.0
 Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
 C Compiler:      Armcc.exe V5.06 update 6 (build 750)
 Assembler:       Armasm.exe V5.06 update 6 (build 750)
 Linker/Locator:  ArmLink.exe V5.06 update 6 (build 750)
 Library Manager: ArmAr.exe V5.06 update 6 (build 750)
 Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
-CPU DLL:         SARMCM3.DLL V5.28.0.0
+CPU DLL:         SARMCM3.DLL V5.31.0.0
 Dialog DLL:      DCM.DLL V1.17.3.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.6.0
-Dialog DLL:      TCM.DLL V1.36.2.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
+Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-E:\STUDY\192_semester\Design_Project\Code\Smart_Agriculture_STM32F1\Smart_Agriculture_STM32F1.uvprojx
-Project File Date:  08/03/2020
+D:\STUDY\192_semester\Design_Project\Code\Smart_Agriculture_STM32F1\Smart_Agriculture_STM32F1.uvprojx
+Project File Date:  08/07/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Smart_Agriculture_STM32F1'
-".\Objects\Smart_Agriculture.axf" - 0 Error(s), 0 Warning(s).
+compiling stm32f10x_it.c...
+compiling system_stm32f10x.c...
+compiling main.c...
+Src\main.c(40): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *restrict"
+  		sprintf(txbuffer, "a%4.1f,%4.1f,%8.1f", DHT11_temp, DHT11_humd, lux);
+Src\main.c: 1 warning, 0 errors
+compiling misc.c...
+compiling stm32f10x_i2c.c...
+compiling stm32f10x_adc.c...
+compiling stm32f10x_usart.c...
+compiling stm32f10x_rcc.c...
+compiling stm32f10x_tim.c...
+assembling startup_stm32f10x_md.s...
+compiling stm32f10x_dma.c...
+compiling stm32f10x_gpio.c...
+compiling MAX44009.c...
+compiling Systick.c...
+compiling I2C.c...
+compiling GPIO.c...
+compiling DS18B20.c...
+Mylib\DS18B20.c(126): warning:  #550-D: variable "Presence"  was set but never used
+      uint8_t Presence;
+Mylib\DS18B20.c: 1 warning, 0 errors
+compiling Timerx.c...
+compiling DHT11.c...
+compiling Uart.c...
+linking...
+Program Size: Code=10988 RO-data=412 RW-data=76 ZI-data=1052  
+FromELF: creating hex file...
+".\Objects\Smart_Agriculture.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.5.1.pack
-                ARM.CMSIS.5.5.1
+                http://www.keil.com/pack/ARM.CMSIS.5.7.0.pack
+                ARM.CMSIS.5.7.0
                 CMSIS (Cortex Microcontroller Software Interface Standard)
-   * Component: CORE Version: 5.2.0
+   * Component: CORE Version: 5.4.0
 
 Package Vendor: Keil
                 http://www.keil.com/pack/Keil.STM32F1xx_DFP.2.3.0.pack
@@ -44,13 +73,13 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_Smart_Agriculture_STM32F1
-  C:\Users\Lam_Vien\AppData\Local\Arm\Packs\ARM\CMSIS\5.5.1\CMSIS\Core\Include
-  C:\Users\Lam_Vien\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
+  C:\Users\nguye\AppData\Local\Arm\Packs\ARM\CMSIS\5.7.0\CMSIS\Core\Include
+  C:\Users\nguye\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:00:00
+   * Component: ARM::CMSIS:CORE:5.4.0
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
